Ajout par Léon (@gwadz_ sur Twitter) : - Fix du overflow - Fix de la hauteur du bloc de départ pour qu'il soit aligné avec le quai

--- a/src/style.css
+++ b/src/style.css
@@ -20,3 +20,9 @@ body {
   background-color: #CCC;
   font-family: Achemine, Verdana, Arial, sans-serif;
 }
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
